--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <!-- <link rel="stylesheet" href="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.indigo-pink.min.css"> -->
   <!-- <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue_grey-red.min.css" /> -->
-  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-deep_purple.min.css" />
+  <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.orange-indigo.min.css" />
   <script src="https://storage.googleapis.com/code.getmdl.io/1.0.6/material.min.js">
   </script>
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
